src/test/ui/dst/issue-90528-unsizing-suggestion-1.stderr
error[E0277]: the trait bound `[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:13:16
   |
LL |     wants_read([0u8]);
   |     ---------- ^^^^^
   |     |          |
   |     |          the trait `Read` is not implemented for `[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&[0u8][..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `&[u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:18:16
   |
LL |     wants_read(&[0u8]);
   |     ---------- ^^^^^^
   |     |          |
   |     |          the trait `Read` is not implemented for `&[u8; 1]`
   |     |          help: convert the array to a `&[u8]` slice instead: `&[0u8][..]`
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error[E0277]: the trait bound `&mut [u8; 1]: Read` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:25:16
   |
LL |     wants_read(&mut [0u8]);
   |     ---------- ^^^^^^^^^^ the trait `Read` is not implemented for `&mut [u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the following implementations were found:
             <&[u8] as Read>
note: required by a bound in `wants_read`
  --> $DIR/issue-90528-unsizing-suggestion-1.rs:10:23
   |
LL | fn wants_read(_: impl Read) {}
   |                       ^^^^ required by this bound in `wants_read`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
